--- a/website/server/templates/public/modPage.html
+++ b/website/server/templates/public/modPage.html
@@ -15,7 +15,9 @@
             <br></br>
                 <img src="{{modIcon}}" alt="mod icon" class="h-72 w-72 items-center mx-auto my-auto m-8">
                 <div class=" text-center m-6">
+                    <p class=" text-6xl font-bold text-white">{{modTitle}}</p>
                 <button class="px-4 py-1 mx-auto bg-gray-300 font-bold text-xl text-gray-800 rounded-full hoverable" onclick="window.open('{{modDownloadLink}}')">下载模组</button>
+                
                 </div>
                     <br></br>
             </div>
