新增部署脚本

--- a/website/server/templates/public/404.html
+++ b/website/server/templates/public/404.html
@@ -24,7 +24,7 @@
 	max-width:800px;
 	margin:0 auto;
   color: transparent;
-  background: url({{ url_for('static',filename='/assets/rick.gif') }}) center/cover;
+  background: url({{ url_for('static',filename='assets/rick.gif') }}) center/cover;
  -webkit-background-clip: text;
   background-clip: text;
   word-spacing: 0px;
@@ -40,7 +40,7 @@
 </style>
 
 
-<p class="font-bold roll" onclick="window.open('/public/index.html')">We're no strangers to love
+<p class="font-bold roll" onclick="window.open('http://150.158.54.147:8000')">We're no strangers to love
 	You know the rules and so do I
 	A full commitment's what I'm thinking of
 	You wouldn't get this from any other guy
